#
# some news ... see also TODO for hints
#


2017-09-09 -> add control of the astronaut via joystick

2017-09-08 -> fix joystick initialisation

2017-09-07 -> set correct size of screen and image for input_control example
	      (the first example which should run on the tv)
	   -> add first input parts for the joystick

2017-09-06 -> change pos_t of game_obj_t from int to float
	   -> add velocity and acceleration to game_obj_t
	   -> add some common operations on vector_2d_t
	   -> add some functions to set pos of game_obj_t
	   -> add skeleton input_control (joystick/mouse/keyboard control of an object)

2017-09-05 -> remove lib_example (use_game_obj_t is a better example)
	   -> mark draw_texture and draw_frame_texture internal
	   -> add draw_object as a replacement
	   -> init game_obj_t.frame with -1 (means no sprite_sheet)
	   -> add init_game_object_from_file function which does load_texture()
	      and init_game_object in one step
	   -> some rework of th draw_*_texture functions (make them aware of game_obj_t)
	   -> add function set_object_frame which updates game_obj_t.frame content

2017-09-04 -> add AUTHORS, TODO and NEWS file
	   -> split libgame.c in two files (helper.c and texture.c)
	   -> add pixmap folder for our own pixmaps