@@ -7,4 +7,4 @@ libgame:
 - get size of an object (png) and of a sprite sheet
 - add function which gets a array of files (png) and return a game_obj_t *array[]
 - check https://wiki.libsdl.org/SDL_CreateSoftwareRenderer for devices with no hardware renderer
-- fix handling of second joystick (only on works)
+
